<resources>
    <string name="app_name">Estockando</string>
    <string name="bemvindo">Bem-Vindo</string>
    <string name="qual_o_seu_nome">Qual é o seu nome?</string>
    <string name="iniciar">Iniciar</string>
    <string name="insira_seu_nome_por_favor">Insira seu nome, por favor!</string>
    <string name="_0_produtos">000 Produtos</string>
    <string name="r_00_00">R$00,00</string>
    <string name="eu">Olá, Leonam Cruz do Nascimento!</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="relat_rios">Relatórios</string>
    <string name="mais_vendido_picles">Picles</string>
    <string name="ol">"Olá, "</string>
    <string name="vendas">Vendas</string>
    <string name="estoque">Estoque</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mostrar_todos_os_produtos">Mostrar Todos os Produtos</string>
    <string name="insira_o_id">Insira o ID</string>
    <string name="de">De</string>
    <string name="at">Até</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="lorem_ipsum">A rola dele parece um bambu e eu tenho medo do comedor de cu, fui capturado pelo come cu, ele arrombou alargou o meu cu. I ought to just try that with my boss; I\'d get kicked out on the spot. But who knows, maybe that would be the best thing for me. If I.</string>
    <string name="quantidade">Quantidade</string>
    <string name="cadastrado_em_dd_mm_aaaa">Cadastrado em: dd/mm/aaaa</string>
    <string name="rs">R$00,00</string>
    <string name="n_o_h_produtos">Não localizado</string>
    <string name="cadastre_novos_produtos_para_eles_aparecerem_por_aqui">Verifique seus produtos</string>
    <string name="nada_por_aqui">Nada por aqui :(</string>
    <string name="_0">0</string>
    <string name="n_o_possui">Não possui</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="nome">Nome</string>
    <string name="descri_o_do_produto">Descrição do produto</string>
    <string name="pre_o">Preço</string>
    <string name="c_digo_de_barras">Código de Barras</string>
    <string name="quer_da_c_mera_ou_galeria">Quer da Câmera ou Galeria?</string>
    <string name="escolha_entre_sua_c_mera_e_galeria_para_selecionar_a_foto_do_produto">Escolha entre sua câmera e galeria para selecionar a foto do produto.</string>
    <string name="galeria">Galeria</string>
    <string name="c_mera">Câmera</string>
    <string name="permissao_negada">Permissão da câmera negada.</string>
    <string name="permissao_negada_armazenamento">Permissão de leitura de armazenamento externo negada.</string>
    <string name="falha_no_processamento_da_imagem">Falha no processamento da imagem.</string>
    <string name="cadastrado_com_sucesso">Cadastrado Com Sucesso</string>
    <string name="cadastrado_em">Cadastrado em:</string>
    <string name="insira_um_valor">Insira um valor</string>
    <string name="verifique_os_valores">Verifique os valores.</string>
    <string name="modificar">Modificar</string>
    <string name="excluir">Excluir</string>
</resources>