<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300sp"
    android:layout_margin="16sp"
    android:background="@color/branco">

    <ImageView
        android:id="@+id/imagemCabulosa"
        android:layout_width="130sp"
        android:layout_height="230sp"
        android:layout_marginStart="16sp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:cropToPadding="true"
        />

    <TextView
        android:id="@+id/nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:text="@string/nome_do_produto"
        android:textColor="@color/preto"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imagemCabulosa"
        app:layout_constraintTop_toTopOf="@id/imagemCabulosa" />

    <TextView
        android:id="@+id/descricao_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:maxEms="12"
        android:justificationMode="inter_word"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/preto"
        app:layout_constraintStart_toEndOf="@id/imagemCabulosa"
        app:layout_constraintTop_toBottomOf="@id/nome_produto" />

    <TextView
        android:id="@+id/quantidade_produtos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="@string/quantidade"
        android:textColor="@color/preto"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imagemCabulosa"
        app:layout_constraintTop_toBottomOf="@id/descricao_produto" />

    <TextView
        android:id="@+id/quando_foi_cadastrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        app:layout_constraintStart_toEndOf="@id/imagemCabulosa"
        app:layout_constraintTop_toBottomOf="@id/quantidade_produtos"
        android:text="@string/cadastrado_em_dd_mm_aaaa"
        android:textColor="@color/preto"
        app:layout_constraintBottom_toBottomOf="@id/imagemCabulosa"
        />

    <TextView
        android:id="@+id/preco_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/quantidade_produtos"
        app:layout_constraintTop_toTopOf="@id/quantidade_produtos"
        android:text="@string/rs"
        android:textColor="@color/preto"
        android:layout_marginStart="8sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>