<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.atividades.CadastrarProdutos">

    <View
        android:id="@+id/retanguloDoCadastro"
        android:layout_width="match_parent"
        android:layout_height="125sp"
        android:background="@drawable/square"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"></View>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clicar_para_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/retanguloDoCadastro">

        <ImageView
            android:id="@+id/cadastrarBotao"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_marginEnd="8sp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/texto_cadastrar"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boxadd" />

        <TextView
            android:id="@+id/texto_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_produto"
            android:textColor="@color/preto"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cadastrarBotao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cadastrarBotao"
            app:layout_constraintTop_toTopOf="@id/cadastrarBotao" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/desgrace"
        android:layout_width="match_parent"
        android:layout_height="550sp"
        android:background="@drawable/square"
        android:backgroundTint="@color/pretoPuro"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginHorizontal="22sp"
        android:background="@drawable/retangulo_perguntas"
        android:hint="@string/nome"
        android:maxLength="255"
        android:padding="16sp"
        app:layout_constraintBottom_toTopOf="@id/descricao"
        app:layout_constraintTop_toTopOf="@+id/desgrace"

        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginHorizontal="22sp"
        android:layout_marginTop="32sp"
        android:background="@drawable/retangulo_perguntas"
        android:hint="@string/descri_o_do_produto"
        android:maxLength="255"
        android:padding="16sp"
        app:layout_constraintBottom_toTopOf="@id/preco"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/preco"
        android:layout_width="0sp"
        android:layout_height="55sp"
        android:layout_marginHorizontal="22sp"
        android:layout_marginTop="32sp"
        android:background="@drawable/retangulo_perguntas"
        android:hint="@string/pre_o"
        android:maxLength="255"
        android:padding="16sp"
        app:layout_constraintBottom_toTopOf="@id/codigoDeBarras"
        app:layout_constraintEnd_toStartOf="@id/quantidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/quantidade"
        android:layout_width="0sp"
        android:layout_height="55sp"
        android:layout_marginHorizontal="22sp"
        android:background="@drawable/retangulo_perguntas"
        android:hint="@string/quantidade"
        android:maxLength="255"
        android:padding="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/preco"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/preco"
        app:layout_constraintTop_toTopOf="@+id/preco" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/codigoDeBarras"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginHorizontal="22sp"
        android:layout_marginTop="32sp"
        android:background="@drawable/retangulo_perguntas"
        android:hint="@string/c_digo_de_barras"
        android:maxLength="255"
        android:padding="16sp"
        app:layout_constraintBottom_toTopOf="@id/imageCodeButton"
        app:layout_constraintTop_toBottomOf="@id/preco" />

    <ImageView
        android:id="@+id/imageCodeButton"
        android:layout_width="65sp"
        android:layout_height="65sp"
        android:layout_marginTop="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/desgrace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera"
        app:layout_constraintTop_toBottomOf="@+id/codigoDeBarras"
        app:srcCompat="@drawable/code_bar"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="65sp"
        android:layout_height="65sp"
        app:layout_constraintBottom_toBottomOf="@id/imageCodeButton"
        app:layout_constraintEnd_toStartOf="@id/imageCodeButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageCodeButton"
        app:srcCompat="@drawable/cam"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/imageCodigoDeBarras"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/desgrace"
        android:layout_marginTop="8sp"
        android:layout_marginHorizontal="8sp"
        app:layout_constraintBottom_toTopOf="@id/retanguloDoCadastro"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="25sp"
        android:layout_height="25sp"
        app:layout_constraintStart_toEndOf="@id/camera"
        app:layout_constraintBottom_toBottomOf="@id/camera"
        app:layout_constraintTop_toTopOf="@id/camera"
        android:layout_marginStart="8sp"
        app:srcCompat = "@drawable/check"
        android:importantForAccessibility="no" />
</androidx.constraintlayout.widget.ConstraintLayout>