<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SearchStockFragmet">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTodosOsProdutos"
        android:layout_width="match_parent"
        android:layout_height="125sp"
        android:layout_margin="16sp"
        android:backgroundTint="@color/branco"
        app:cardCornerRadius="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/cardPesquisaPorId"
        >

        <ImageView
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="20sp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/pesquisa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="28sp"
            android:text="@string/mostrar_todos_os_produtos"
            android:textColor="@color/preto"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPesquisaPorId"
        android:layout_width="match_parent"
        android:layout_height="125sp"
        android:layout_margin="16sp"
        android:backgroundTint="@color/branco"
        app:cardCornerRadius="20sp"
        app:layout_constraintTop_toBottomOf="@id/cardTodosOsProdutos"
        app:layout_constraintBottom_toTopOf="@id/cardPesquisaPorPreço"
        >


        <EditText
            android:id="@+id/numeroDoIdPesquisa"
            android:layout_width="200sp"
            android:layout_height="75sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="28sp"
            android:backgroundTint="@color/preto"
            android:hint="@string/insira_o_id"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:padding="8sp"
            android:textColor="@color/preto"
            android:textColorHint="@color/preto" />

        <ImageView
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="20sp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/pesquisa" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPesquisaPorPreço"
        android:layout_width="match_parent"
        android:layout_height="125sp"
        android:layout_margin="16sp"
        android:backgroundTint="@color/branco"
        app:cardCornerRadius="20sp"
        app:layout_constraintTop_toBottomOf="@id/cardPesquisaPorId"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <ImageView
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="20sp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/porco" />

        <EditText
            android:id="@+id/de"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="28sp"
            android:backgroundTint="@color/preto"
            android:hint="@string/de"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:padding="8sp"
            android:textColor="@color/preto"
            android:textColorHint="@color/preto" />

        <EditText
            android:id="@+id/ate"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="112sp"
            android:backgroundTint="@color/preto"
            android:hint="@string/at"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:padding="8sp"
            android:textColor="@color/preto"
            android:textColorHint="@color/preto" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>