<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">


    <View
        android:id="@+id/retanguloSuperior"
        android:layout_width="match_parent"
        android:layout_height="240sp"
        android:background="@drawable/square"
        app:layout_constraintTop_toTopOf="parent
"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_margin="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/config" />

    <TextView
        android:id="@+id/nomeDoCidadao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eu"
        android:textColor="@color/preto"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divisao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/divisao"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginBottom="36sp"
        android:paddingHorizontal="32sp"
        app:layout_constraintBottom_toBottomOf="@id/retanguloSuperior">

        <LinearLayout
            android:id="@+id/layoutDeProduto"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/layoutGanhos"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="55sp"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/boxok" />

            <TextView
                android:id="@+id/textoQntDeProdutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0_produtos"
                android:textColor="@color/preto"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutGanhos"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/layoutProdutoMaisVendido"
            app:layout_constraintStart_toEndOf="@id/layoutDeProduto">

            <ImageView
                android:layout_width="55sp"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/porco" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_00_00"
                android:textColor="@color/preto"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutProdutoMaisVendido"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutGanhos">

            <ImageView
                android:layout_width="55sp"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/champion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mais_vendido_picles"
                android:textColor="@color/preto"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bolaVender"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginBottom="48sp"
        android:background="@drawable/circulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bolaCadastrar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent">


    </View>

    <ImageView
        android:id="@+id/imageVender"
        android:layout_width="65sp"
        android:layout_height="65sp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/bolaVender"
        app:layout_constraintEnd_toEndOf="@id/bolaVender"
        app:layout_constraintStart_toStartOf="@id/bolaVender"
        app:layout_constraintTop_toTopOf="@id/bolaVender"
        app:srcCompat="@drawable/cart" />

    <View
        android:id="@+id/bolaCadastrar"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@drawable/circulo"
        app:layout_constraintBottom_toBottomOf="@id/bolaVender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bolaVender"
        app:layout_constraintTop_toTopOf="@+id/bolaVender" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="65sp"
        android:layout_height="65sp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/bolaCadastrar"
        app:layout_constraintEnd_toEndOf="@id/bolaCadastrar"
        app:layout_constraintStart_toStartOf="@id/bolaCadastrar"
        app:layout_constraintTop_toTopOf="@id/bolaCadastrar"
        app:srcCompat="@drawable/boxadd" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPesquisa"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:orientation="vertical"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toTopOf="@id/cardAlterar"
        app:layout_constraintEnd_toStartOf="@id/cardRelatorio"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/retanguloSuperior"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/lupa"
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toTopOf="@id/textoPesquisa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/pesquisa" />

            <TextView
                android:id="@+id/textoPesquisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesquisar"
                android:textColor="@color/branco"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lupa"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRelatorio"
        android:layout_width="125sp"
        android:layout_height="125sp"

        android:orientation="vertical"
        app:cardCornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardPesquisa"
        app:layout_constraintTop_toTopOf="@id/cardPesquisa"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/relatarImage"
                android:layout_width="68dp"
                android:layout_height="63dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toTopOf="@id/textoRelatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/relatar" />

            <TextView
                android:id="@+id/textoRelatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relat_rios"
                android:textColor="@color/branco"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/relatarImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAlterar"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:layout_marginEnd="8sp"
        android:orientation="vertical"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toTopOf="@id/bolaVender"
        app:layout_constraintEnd_toStartOf="@id/cardDeletar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPesquisa">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/alterarImage"
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toTopOf="@id/textoAlterar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/alterar" />

            <TextView
                android:id="@+id/textoAlterar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar"
                android:textColor="@color/branco"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alterarImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDeletar"
        android:layout_width="125sp"
        android:layout_height="125sp"

        android:orientation="vertical"
        app:cardCornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardAlterar"
        app:layout_constraintTop_toTopOf="@id/cardAlterar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/excluirImage"
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toTopOf="@id/textoExcluir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/delete" />

            <TextView
                android:id="@+id/textoExcluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excluir"
                android:textColor="@color/branco"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/excluirImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>